Fixed MWB1030Test